sample/syntax-error/ex6.ds
if(true) {
	var
	a
	=
	12
}